<resources>
    <string name="app_name">Shopping App</string>
    <string name="app_dev">Zach Lerew</string>

    <string name="format_id">Id %s</string>
    <string name="format_inStock">%d In Stock</string>
    <string name="format_lowStock">Only %d Remaining</string>
    <string name="format_noStock">Out of Stock</string>
    <string name="format_currency">%s %.2f</string>
    <string name="format_length_width_height">%.2f cm (L) X %.2f cm (W) X %.2f cm (H)</string>
    <string name="format_weight">%.2f Kg</string>
    <string name="format_rating">%d%% Positive Reviews</string>
    <string name="format_subtotal">SubTotal: %s</string>
    <string name="format_tax">+Tax: %s</string>
    <string name="format_total">Total: %s</string>

    <!-- Actions -->
    <string name="action_cancel">Cancel</string>
    <string name="action_switch">Switch</string>
    <string name="action_addToCart">Add To Cart</string>
    <string name="action_checkout">Purchase Items</string>
    <string name="action_selectAccount">Click Here to select an account</string>
    <string name="action_search">Search</string>
    <string name="action_okay">Okay</string>

    <!-- Menus -->
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_deals">Special Deals</string>
    <string name="menu_about">About Me</string>
    <string name="menu_search">Search</string>
    <string name="menu_cart">Shopping Cart</string>
    <string name="menu_orders">Your Orders</string>
    <string name="menu_select_user">Select User Account</string>
    <string name="card_dev_tools">Development tools below!</string>

    <!-- Status -->
    <string name="status_inCart">Added!</string>
    <string name="status_cartEmpty">Shopping Cart is Empty</string>
    <string name="status_notLoggedIn">You are not logged in!</string>
    <string name="status_noOrders">You have not placed any orders yet!</string>

    <!-- External links -->
    <string name="exter_github">CarvellWakeman on GitHub</string>
    <string name="link_github">https://github.com/CarvellWakeman</string>
    <string name="exter_linkedin">Zach Lerew on LinkedIn</string>
    <string name="link_linkedin">https://www.linkedin.com/in/zach-lerew</string>
    <string name="exter_mysite">My Website</string>
    <string name="link_mysite">http://www.carvellwakeman.ddns.net</string>

    <!-- Support message -->
    <string name="pitch_myself">My name is Zach Lerew.
        \n\nI am a developer with a passion for making applications both stylish and functional.
        \n\nI have over a year of experience as a developer for OSU CASS, where I designed and implemented software used by several clients for the whole state of Oregon.
        \n\nAt university I specialized in application development and computer graphics, and in my free time I love to build software and tinker with everything I can.
        \n\nCheck out some of my other work!</string>

</resources>
