<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_deals"
            android:icon="@drawable/alert"
            android:title="Special Deals" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/order"
            android:title="Your Orders" />

        <item android:title="@string/menu_settings">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_settings"
                        android:icon="@drawable/gear"
                        android:title="@string/menu_settings" />
                    <item
                        android:id="@+id/nav_support"
                        android:icon="@drawable/forum"
                        android:title="Help and Support" />
                </group>
            </menu>
        </item>

    </group>

</menu>